--- a/css/about.css
+++ b/css/about.css
@@ -159,7 +159,7 @@ li {
   object-fit: cover;
 }
 .rectangle_3 {
-  margin-left: 60px;
+  margin-left: 45px;
   width: 550px;
   height: 550px;
   flex-shrink: 0;
@@ -256,6 +256,7 @@ li {
 .title_muctieu {
   margin-left: 110px;
 }
+
 .title_7 {
   font-size: 60px;
   font-weight: 700;
@@ -430,6 +431,9 @@ li {
   margin-left: 200px;
   margin-top: -100px;
 }
+.text_content_3 {
+  margin-right: 4px;
+}
 @media (min-width: 1500px) {
   .container-fluid {
     width: 1500px;
@@ -438,10 +442,167 @@ li {
     width: 100%;
   }
 }
+@media (max-width: 900px) {
+  .b1,
+  .b3,
+  .Group_top_a,
+  .Polygon2,
+  .Polygon5,
+  .Group_sao_1,
+  .Group41_about {
+    display: none;
+  }
+  .title_2,
+  .title_1 {
+    font-size: 50px;
+    letter-spacing: 3px;
+  }
+  .img_about {
+    margin-top: 20px;
+  }
+  .ls {
+    margin-top: 90px;
+    text-align: center;
+  }
+  .title_3,
+  .title_4 {
+    margin-top: 12px;
+    margin-left: 0px;
+    font-size: 50px;
+    letter-spacing: 3px;
+  }
+  .title_5 {
+    font-size: 60px;
+  }
+  .title_6 {
+    font-size: 30px;
+  }
+  .title_muctieu {
+    margin-left: 0px;
+    text-align: center;
+    margin-top: 50px;
+  }
+  .title_7,
+  .title_8 {
+    font-size: 50px;
+    margin-top: 2px;
+
+    letter-spacing: 3px;
+  }
+  .text-start {
+    text-align: start !important;
+  }
+  .title_9 {
+    font-size: 20px;
+    margin-top: 2px;
+
+    letter-spacing: 3px;
+  }
+  .content {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  .triangle {
+    margin-left: 30px;
+  }
+
+  .Group42_ttnt,
+  .r2,
+  .c2,
+  .Group_r2 {
+    display: none;
+  }
+  .rectangle_1 {
+    position: absolute;
+    margin-left: 175px;
+    width: 450px;
+    height: 450px;
+    margin-top: 670px;
+  }
+  .rectangle_3 {
+    position: absolute;
+    width: 450px;
+    height: 450px;
+    margin-top: 580px;
+    margin-left: 200px;
+  }
+  .mt_pc {
+    margin-top: 680px;
+  }
+  .tt_nt {
+    margin-top: 460px;
+  }
+  .title_8 {
+    margin-bottom: 20px;
+  }
+  .lottie {
+    margin-top: -20px;
+    width: 300px !important;
+    height: 350px !important;
+  }
+  .lottie2 {
+    margin-top: -50px;
+    width: 300px !important;
+    height: 350px !important;
+  }
+  .didong {
+  }
+  .rectangle_2,
+  .Polygon2,
+  .ttnt {
+    margin: 0;
+    width: 450px;
+    height: 450px;
+  }
+  .title_10,
+  .title_11 {
+    text-align: center;
+    font-size: 50px;
+    margin-top: 2px;
+    letter-spacing: 3px;
+  }
+  .content_csvc {
+    margin-right: 15px;
+    margin-top: 150px;
+  }
+  .content_csvc_1 {
+    width: 100%;
+    text-align: start;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .content_csvc_2 {
+    margin-top: -50px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .lottie3 {
+    width: 200px !important;
+    margin-top: -450px;
+    margin-left: 300px;
+    position: absolute;
+  }
+  .content_ttnt {
+    margin-left: 15px;
+  }
+  .ttnt {
+    width: 450px;
+    height: 450px;
+  }
+  .Layer {
+    margin-left: 0;
+  }
+  .ttnt_b {
+    text-align: center;
+  }
+}
 
 @media (max-width: 450px) {
   .b1,
-  .b3 {
+  .b3,
+  .Group_top_a,
+  .Polygon2,
+  .Polygon5 {
     display: none;
   }
   .title_2,
@@ -492,7 +653,7 @@ li {
     margin-right: 50px;
   }
   .triangle {
-    margin-left: 10px;
+    margin-left: 20px;
     width: 350px;
   }
   .mm2 {
@@ -506,15 +667,17 @@ li {
   }
   .rectangle_1 {
     position: absolute;
+    margin-left: 45px;
     width: 300px;
     height: 300px;
-    margin-top: 680px;
+    margin-top: 770px;
   }
   .rectangle_3 {
     position: absolute;
     width: 300px;
     height: 300px;
     margin-top: 580px;
+    margin-left: 40px;
   }
   .mt_pc {
     margin-top: 380px;
@@ -540,7 +703,9 @@ li {
   .didong {
   }
   .rectangle_2,
-  .Polygon2 {
+  .Polygon2,
+  .ttnt {
+    margin: 0;
     width: 300px;
     height: 300px;
   }
@@ -553,6 +718,7 @@ li {
   }
   .content_csvc {
     margin-right: 15px;
+    margin-top: 150px;
   }
   .content_csvc_1 {
     width: 100%;
@@ -567,8 +733,9 @@ li {
   }
   .lottie3 {
     width: 200px !important;
-    margin-top: -30px;
-    margin-left: 95px;
+    margin-top: -550px;
+    margin-left: 120px;
+    position: absolute;
   }
   .content_ttnt {
     margin-left: 15px;
@@ -576,5 +743,40 @@ li {
   .ttnt {
     width: 300px;
     height: 300px;
+  }
+  .Layer {
+    margin-left: 0;
+  }
+  .ttnt_b {
+    text-align: center;
+  }
+  .content_gv {
+    font-size: 18px !important;
+  }
+}
+@media (max-width: 393px) {
+  .lottie3 {
+    margin-left: 100px;
+  }
+  .triangle {
+    margin-left: 12px;
+    width: 350px;
+  }
+}
+@media (max-width: 363px) {
+  .rectangle_1 {
+    position: absolute;
+    margin-left: 45px;
+    width: 300px;
+    height: 300px;
+    margin-top: 700px;
+  }
+  .lottie3 {
+    margin-left: 88px;
+    margin-top: -520px;
+  }
+  .triangle {
+    margin-left: 2px;
+    width: 350px;
   }
 }
